--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,22 +1,53 @@
-<div class="relative bg-white">
+{%  schema %}
+    {
+        "name": "Header",
+        "settings": [
+            {
+                "type": "text",
+                "id": "mobile_menu_title",
+                "label": "Mobile Menu Title",
+                "default": "name",
+                "info": "Set mobile menu title for the page"
+            },
+            {
+                "type": "link_list",
+                "id": "menu",
+                "label": "Header Menu",
+                "default": "main-menu"
+            }
+        ],
+    }
+{% endschema %}
+
+{% assign main_menu_linklist = linklists[ section.settings.menu ].links %}
+{{ shop.customer_accounts_enabled }}
+
+<div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
     <div class="mx-auto px-4 sm:px-6">
-        <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
+        <div class="flex justify-between items-center py-6 md:justify-start md:space-x-10">
             
             <!-- STORE NAME / STORE LOGO -->
             <div class="flex justify-start lg:flex-1 truncate">
                 <h1 class="text-xl font-bold truncate">{{ shop.name }}</h1>
             </div>
 
+            <!-- mobile burger icon -->
+            <div class="-mr-2 -my-2 ml-3 md:hidden">
+                <button x-on:click="mobileMenuOpen = true" type="button" class="bg-white p-2 inline-flex items-center justify-center focus:outline-none">{% render 'icon-menu' %}</button>
+            </div>
+
             <!-- NAVIGATION MENU -->
-            <nav class="hidden md:flex space-x-10" x-data="{ open: false }">
-                {% for link in linklists.main-menu.links %}
+            <nav class="hidden md:flex space-x-10">
+                {% for link in main_menu_linklist %}
                     {% if link.links != blank %}
 
-                        <div class="relative"> 
-                            <button x-on:click="open = !open" type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">{{ link.title }}{% render 'icon-dropdown' %}</button>
+                        {% assign link_handle = link.handle|replace: '-', '_' %}
+
+                        <div class="relative" x-data="{ {{ link_handle }} : false }"> 
+                            <button x-on:click="{{ link_handle }} = !{{ link_handle }}" type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">{{ link.title }}{% render 'icon-dropdown' %}</button>
 
                             <!-- subnav -->
-                            <div x-show="open" @click.away="open = false" class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
+                            <div x-show="{{ link_handle }}" @click.away="{{ link_handle }} = false" class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
                                 <div class="shadow-lg border ring-black ring-opacity-5 overflow-hidden rounded-lg">
                                     <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
                                         {%  for child in link.links %}
@@ -51,9 +82,67 @@
                 <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">{% render 'icon-shopping-bag' %}</a>
 
                 <!-- login/ register -->
-                <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900">Login</a>
-                <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">Register</a>
+                {%  if shop.customer_accounts_enabled %}
 
+                    <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900">Login</a>
+                    <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">Register</a>
+                
+                {%  endif %}
+
+            </div>
+        </div>
+    </div>
+
+    <!-- MOBILE MENU CONTAINER -->
+    <div class="absolute z-10 top-0 inset-x-0 p-2 transform origin-top-left md:hidden" x-show="mobileMenuOpen">
+        <div class="shadow-lg rounded-lg ring-1 ring-black ring-opacity-5 bg-white w-full">
+            <div class="p-5 divide-y-2 divide-gray-50">
+
+                <!-- MOBILE MENU HEADER TITLE PLUS CLOSE BUTTON -->
+                <div class="flex items-center justify-between pb-3">
+                    <div>
+                        <h1 class="text-lg text-gray-500">{{ section.settings.mobile_menu_title }}</h1>
+                    </div>
+
+                    <div class="-mr-2">
+                        <button x-on:click="mobileMenuOpen = false" type="button" class="bg-white rounded-md p-2 text-gray-500">{% render 'icon-close' %}</button>
+                    </div>
+                </div>
+
+                <!-- NAVIGATION LINKS FOR MOBILE MENU -->
+                <div class="pt-3">
+                    <nav class="grid gap-y-7">
+
+                        {% for link in main_menu_linklist %}
+                            {% if link.links != blank %}
+
+                                {% assign link_handle = link.handle|replace: '-', '_' %}
+
+                                <div class="relative" x-data="{ {{ link_handle }} : false }">
+                                    <button x-on:click="{{ link_handle }} = !{{ link_handle }}" type="button" class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full">
+                                        <div>{{ link.title }}</div>
+                                        {% render 'icon-dropdown' %}
+                                    </button>
+        
+                                    <div class="grid gap-y-7 py-3" x-show="{{ link_handle }}" @click.away="{{ link_handle }} = false">
+                                        {% for child in link.links %}
+
+                                            <a href="{{ child.url }}" class="-m-3 p-3 mt-2 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50 {% if child.active == true %} text-red-900 {% endif %}">
+                                                <span class="ml-3 text-base font-medium text-gray-500">{{ child.title }}</span>
+                                            </a>
+
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+                            {%  else %}
+
+                                <a href="{{ link.url }}" class="-m-3 p-3 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50 {% if link.active == true %} text-red-900 {% endif %}">{{ link.title }}</a>
+
+                            {% endif %}
+                        {%  endfor %}
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
