--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,14 +1,123 @@
-<!-- title -->
-<h1>{{ article.title }}</h1>
+{% schema %}
+    {
+        "name" : "Template Article",
+        "settings": [
+            {
+                "type" : "checkbox",
+                "id" : "enable_author",
+                "default" : true,
+                "label" : "Display Author Name"
+            },
+            {
+                "type" : "checkbox",
+                "id" : "enable_published_date",
+                "default" : true,
+                "label" : "Display Published Date"
+            }
+        ],
+        "blocks" : [
+            {
+                "type" : "article_title",
+                "name" : "title",
+                "limit" : 1
+            },
+            {
+                "type" : "article_author",
+                "name" : "Author",
+                "limit" : 1
+            },
+            {
+                "type" : "article_published_date",
+                "name" : "Published Date",
+                "limit" : 1
+            },
+            {
+                "type" : "featured_image",
+                "name" : "Thumbnail",
+                "limit" : 1
+            },
+            {
+                "type" : "article_content",
+                "name" : "Content",
+                "limit" : 1
+            },
+        ]
+    }
+{% endschema %}
 
-<!-- author -->
-<small>{{ article.author }}</small>
+<article class="py-8">
+    {% for block in section.blocks %}
+        {% case block.type %}
+    
+            <!-- title -->
+            {% when 'article_title' %}
+                <div class="flex items-center justify-center">
+                    <div class="max-width-7xl text-center">
 
-<!-- date/ time -->
-<time datetime="{{ article.published_at | date: '%Y-%m-%dT%H:%M:%S%z' }}">{{ article.published_at | date: '%d-%m-%Y' }}</time>
+                        <!-- category -->
+                        <a href="{{ blog.url }}" class="text-base uppercase text gray-500 hover:text-gray-900 font-bold">{{ blog.title }}</a>
+                        
+                        <h1 class="my-2 text-4xl md:text-6xl font-medium">{{ article.title }}</h1>
 
-<!-- thumbnail -->
-<img src="{{ article.image | img_url: 'large' }}" loading="lazy" alt="{{ article.image.alt }}" width="" height="" />
+                    </div>
+                </div>
+                
+            <!-- author -->
+            {% when 'article_author' %}
+                <div class="flex items-center justify-center">
+                    <div class="max-width-7xl text-center">
 
-<!-- article content -->
-<div class="article">{{ article.content }}</div>
+                        {% if section.settings.enable_author %}
+                            <small>{{ article.author }}</small>
+                        {%  endif %}
+                        
+                    </div>
+                </div>
+    
+            <!-- date/ time -->
+            {% when 'article_published_date' %}
+                <div class="flex items-center justify-center">
+                    <div class="max-width-7xl text-center">
+
+                        {% if section.settings.enable_published_date %}
+                            <time datetime="{{ article.published_at | date: '%Y-%m-%dT%H:%M:%S%z' }}">{{ article.published_at | date: format: 'on_date' }}</time>
+                        {% endif %}
+                                
+                    </div>
+                </div>
+            
+            <!-- thumbnail -->
+            {% when 'featured_image' %}
+                <div class="my-4 max-w-7xl bg-blue-100 rounded-lg mx-2 md:mx-auto overflow-hidden">
+
+                    {% if article.image != blank %}
+                        <img class="w-full h-80 md:h-96 object-cover object-center" src="{{ article.image | img_url: 'large' }}" loading="lazy" alt="{{ article.image.alt }}" width="" height="" />
+                    {% else %}
+                        {% assign placeholder_image = 'lifestyle-2' %}
+
+                        {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 md:h-96 object-cover object-center p-5' }}
+                    {% endif %}
+
+                </div>
+            
+            <!-- article content -->
+            {% when 'article_content' %}
+                <div class="flex items-center justify-center article-content my-8">
+                    <div class="max-w-5xl">
+
+                        {{ article.content }}
+                    
+                    </div>
+                </div>
+    
+        {% endcase %}
+    {% endfor %}
+</article>
+
+<!-- comments -->
+{% if blog.comments_enabled? %}
+    hello world
+{% endif %}
+
+
+
