started work on creating the pagination for the blog listing pages

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -117,7 +117,7 @@
 
 <!-- comments -->
 {% if blog.comments_enabled? %} 
-    {% render 'comment-section' %}
+    {% render 'comment-section', page: article %}
 {% endif %}
 
 <!-- article schema -->
