--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -1,18 +1,91 @@
-{% paginate blog.articles by 3 %}
-    {% for article in blog.articles %}
+{% schema %}
+    {
+        "name" : "Blog",
+        "settings" : [
+            {
+                "type" : "range",
+                "id" : "number_of_blog_posts",
+                "step" : 1,
+                "min" : 1,
+                "max" : 6,
+                "label" : "Blog posts per page",
+                "default" : 3,
+            },
+            {
+                "type" : "checkbox",
+                "id" : "show_description",
+                "default" : true,
+                "label" : "Display blog description"
+            },
+            {
+                "type" : "text",
+                "id" : "blog_read_more",
+                "label" : "Read more label",
+                "default" : "Read more"
+            }
+        ]
+    }
+{% endschema %}
 
-        <div class="blog-card">
+<section class="py-8">
+    {% paginate blog.articles by section.settings.number_of_blog_posts %}
 
-            <!-- image -->
-            {% if article.image %}
-                <img src="{{ article.image.src | image_url: 'medium' }}" alt="{{ article.image.alt }}" width="" height="" />
-            {% else %}
-                {% assign placeholder_image = 'lifestyle-2' %}
+        <!-- page heading -->
+        <h1 class="text-center text-3xl">{{ blog.title }}</h1>
 
-                {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 md:h-96 object-cover object-center p-5' }}
-            {% endif %}
+        <!-- articles -->
+        <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
 
-        </div> 
+                {% for article in blog.articles %}
+            
+                    <a href="{{ article.url }}" class="blog-card w-full py-6 px-3">
+                        <div class="bg-white shadow-xl rounded-lg overflow-hidden">
 
-    {% endfor %}
-{% endpaginate %}
+                            <!-- image -->
+                            {% if article.image %}
+                                <img class="w-full h-80 object-cover" src="{{ article.image | img_url: 'medium' }}" alt="{{ article.image.alt }}" width="" height="" />
+                            {% else %}
+                                {% assign placeholder_image = 'image' %}
+                
+                                {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 object-cover bg-gray-100' }}
+                            {% endif %}
+                
+                            <div class="p-4">
+
+                                <!-- article title -->
+                                <h2 class="text-xl font-medium my-4">{{ article.title }}</h2>
+                    
+                                <!-- article excerpt -->
+                                {% if section.settings.show_description %}
+                                  
+                                    <p>
+                                        {% if article.excerpt.size > 0 %}
+                                            {{ article.excerpt | strip_html | truncatewords: 15 }}
+                                        {% else %}
+                                            {{ article.content | strip_html | truncatewords: 15 }}
+                                        {% endif %}
+                                    </p>
+                    
+                                {% endif %}
+    
+                                <!-- read more -->
+                                <p class="font-medium text-blue-600 hover:text-blue-800 my-4 block">{{ section.settings.blog_read_more }}</p>
+
+                            </div>
+                        
+                        </div>
+                    </a> 
+            
+                {% endfor %}
+
+            </div>
+        </div>
+
+        <!-- pagination -->
+        <div class="max-w-6xl mx-auto">
+            {% render 'pagination', pagination: paginate %}
+        </div>
+        
+    {% endpaginate %}
+</section>
