--- a/snippets/comment-section.liquid
+++ b/snippets/comment-section.liquid
@@ -1,12 +1,12 @@
 <section id="comments" class="my-8">
 
-    {% if article.comments_count > 0 %}
+    {% if page.comments_count > 0 %}
 
         <div class="flex-1 items-center justify-center mx-auto max-w-4xl px-4">
             <h2 class="text-lg mb-4 font-medium">See what people are saying</h2>
 
-            {% paginate article.comments by 5 %}
-                {% for comment in article.comments %}
+            {% paginate page.comments by 5 %}
+                {% for comment in page.comments %}
                     
                     <div class="flex-1 border my-4 px-4 py-2 sm:px-6 sm:py-4 leading-relaxed">
                         <span class="comment-author">{{ comment.author }}</span>
@@ -17,9 +17,10 @@
 
                 {% endfor %}
 
-                {% if paginate.pages > 1 %}
-                    {{ paginate | default_pagination }}
-                {% endif %}
+                <!-- pagination -->
+                <div class="max-w-6xl mx-auto">
+                    {% render 'pagination', pagination: paginate %}
+                </div>
             {% endpaginate %}
         </div>
 
