--- a/snippets/comment-section.liquid
+++ b/snippets/comment-section.liquid
@@ -84,7 +84,7 @@
                             class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
                             placeholder="Jane Doe"
                             required
-                        >
+                        />
 
                     </div>
 
@@ -98,7 +98,7 @@
                             class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
                             placeholder="jane@doe.com"
                             required
-                        >
+                        />
 
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <!-- submit -->
                 <div class="px-1 md:flex mb-3">
                     <div class="md:w-full px-3">
-                        <input type="submit" class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500 transition-all" value="Post comment">
+                        <input type="submit" class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500 transition-all" value="Post comment" />
                     </div>
                 </div>
 
